--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             font-family: 'Arial', sans-serif;
         }
 
-        /* ================= PHONG BÌ ĐÓNG KÍN ================= */
+        /* ================= PHONG BÌ CHUẨN ================= */
         #envelope-screen {
             text-align: center;
             z-index: 10;
@@ -27,30 +27,48 @@
         .envelope-wrapper {
             position: relative;
             width: 320px;
-            height: 220px;
-            background: #a31616; /* Màu đỏ thẫm lớp nền */
+            height: 200px;
+            background: #b71c1c; /* Đáy phong bì */
             border-radius: 0 0 10px 10px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+            box-shadow: 0 15px 35px rgba(0,0,0,0.3);
             margin: 0 auto;
             perspective: 1000px;
         }
 
-        /* Nắp phong bì - Đóng kín hoàn toàn lúc đầu */
+        /* Tấm thiệp nằm bên trong - Giấu hoàn toàn lúc đầu */
+        .letter-inner {
+            position: absolute;
+            bottom: 5px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            height: 90%;
+            background: #ffffff;
+            border-radius: 5px;
+            z-index: 1; /* Nằm dưới nắp và túi */
+            transition: all 0.8s ease-in-out;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        /* Nắp phong bì - Che kín thiệp */
         .flap {
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background: #d32f2f;
-            clip-path: polygon(0 0, 100% 0, 50% 60%); /* Hình tam giác che xuống */
+            width: 0;
+            height: 0;
+            border-left: 160px solid transparent;
+            border-right: 160px solid transparent;
+            border-top: 110px solid #d32f2f; /* Màu nắp */
             transform-origin: top;
-            transition: transform 0.6s ease-in-out;
-            z-index: 5; /* Nằm trên cùng để che thiệp */
-            border-bottom: 1px solid rgba(255,215,0,0.3);
+            transition: transform 0.6s ease;
+            z-index: 4; /* Nằm trên cùng để che */
         }
 
-        /* Thân phong bì lớp trước (Túi) */
+        /* Thân túi phía trước - Giữ thiệp không bị lộ ở dưới */
         .pocket {
             position: absolute;
             top: 0;
@@ -58,54 +76,38 @@
             width: 100%;
             height: 100%;
             background: #d32f2f;
-            clip-path: polygon(0 45%, 50% 75%, 100% 45%, 100% 100%, 0 100%);
-            z-index: 4; /* Nằm dưới nắp nhưng trên thiệp */
+            clip-path: polygon(0 40%, 50% 70%, 100% 40%, 100% 100%, 0 100%);
+            z-index: 3; /* Nằm dưới nắp nhưng trên thiệp */
+            border-radius: 0 0 10px 10px;
         }
 
-        /* Tấm thiệp bên trong */
-        .letter-inner {
-            position: absolute;
-            top: 10%;
-            left: 5%;
-            width: 90%;
-            height: 80%;
-            background: #fff;
-            border-radius: 5px;
-            z-index: 2; /* Nằm dưới nắp và túi */
-            transition: transform 0.8s ease-in-out;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-
-        /* Hiệu ứng khi mở */
+        /* Khi mở phong bì */
         .open .flap {
             transform: rotateX(180deg);
-            z-index: 1; /* Đẩy nắp ra sau khi mở */
-        }
-        .open .letter-inner {
-            transform: translateY(-130px); /* Thiệp trượt lên */
-            z-index: 6; /* Hiện lên trên cùng khi đã trượt ra */
+            z-index: 0; /* Đẩy nắp ra sau */
         }
 
-        /* Nút bấm vàng đỏ */
+        .open .letter-inner {
+            transform: translate(-50%, -150px); /* Thiệp trượt lên */
+            z-index: 5; /* Hiện lên trên cùng */
+        }
+
+        /* Nút bấm */
         .btn-open {
-            margin-top: 50px;
-            padding: 12px 45px;
+            margin-top: 60px;
+            padding: 12px 40px;
             background: #d32f2f;
             color: #ffeb3b;
             border: 3px solid #ffeb3b;
-            border-radius: 25px;
+            border-radius: 30px;
             cursor: pointer;
             font-size: 18px;
             font-weight: bold;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
             transition: 0.3s;
         }
-        .btn-open:hover { transform: scale(1.05); background: #b71c1c; }
 
-        /* ================= MÀN HÌNH THIỆP CHÍNH ================= */
+        /* ================= TRANG THIỆP CHÍNH ================= */
         #card-screen {
             position: fixed;
             inset: 0;
@@ -131,7 +133,7 @@
             border: 3px solid #ffd700;
         }
 
-        /* ================= HIỆU ỨNG SAU KHI MỞ ================= */
+        /* ================= HIỆU ỨNG ================= */
         .flower { position: absolute; pointer-events: none; z-index: 30; animation: fall linear forwards; }
         @keyframes fall {
             0% { transform: translateY(-10vh) rotate(0deg); opacity: 1; }
@@ -147,7 +149,7 @@
         <div class="envelope-wrapper" id="env-main">
             <div class="flap"></div>
             <div class="letter-inner">
-                <span style="color: #d32f2f; font-weight: bold;">🧧 Chúc Mừng Năm Mới</span>
+                <span style="color: #d32f2f; font-weight: bold; font-size: 18px;">🧧 2026</span>
             </div>
             <div class="pocket"></div>
         </div>
@@ -156,9 +158,9 @@
 
     <div id="card-screen">
         <div class="card-body">
-            <h1 style="font-family: 'Dancing Script', cursive; color: #b71c1c; font-size: 38px;">Chúc Mừng Năm Mới Bính Ngọ</h1>
+            <h1 style="font-family: 'Dancing Script', cursive; color: #b71c1c; font-size: 40px; margin-top: 0;">Chúc Mừng Năm Mới</h1>
             <p id="wish" style="font-size: 18px; line-height: 1.6; color: #333;"></p>
-            <div style="font-size: 40px; margin-top: 20px;">🌸🧧🧨</div>
+            <div style="font-size: 40px; margin-top: 20px;">🌸🧧🧨🌼</div>
         </div>
     </div>
 
@@ -168,14 +170,12 @@
         const wishes = [
             "Chúc bạn năm mới vạn sự như ý, học hành tấn tới, thi cử đỗ đạt!",
             "Chúc mừng năm mới Bính Ngọ! Chúc bạn và gia đình bình an, hạnh phúc và thịnh vượng.",
-            "Năm mới chúc bạn luôn rạng rỡ, gặt hái được nhiều thành công trên con đường tri thức."
+            "Năm mới chúc bạn luôn rạng rỡ, gặt hái được nhiều thành công rực rỡ!"
         ];
 
         function handleOpen() {
-            // Mở phong bì
             document.getElementById("env-main").classList.add("open");
 
-            // Chờ thiệp trượt lên rồi mới chuyển cảnh
             setTimeout(() => {
                 document.getElementById("envelope-screen").style.opacity = "0";
             }, 1200);
@@ -185,7 +185,6 @@
                 document.getElementById("card-screen").classList.add("show");
                 document.getElementById("wish").innerText = wishes[Math.floor(Math.random() * wishes.length)];
                 
-                // Kích hoạt hiệu ứng và nhạc
                 const m = document.getElementById("music");
                 m.volume = 0.5;
                 m.play().catch(() => {});
@@ -198,9 +197,9 @@
         function createFlower() {
             const f = document.createElement('div');
             f.className = 'flower';
-            f.innerHTML = Math.random() > 0.5 ? '🌸' : '🌻';
+            f.innerHTML = Math.random() > 0.5 ? '🌸' : '🌼';
             f.style.left = Math.random() * 100 + 'vw';
-            f.style.fontSize = (Math.random() * 15 + 15) + 'px';
+            f.style.fontSize = (Math.random() * 10 + 20) + 'px';
             const dur = Math.random() * 3 + 4;
             f.style.animationDuration = dur + 's';
             document.body.appendChild(f);
